--- a/styles.css
+++ b/styles.css
@@ -215,8 +215,11 @@ background: #ffdac95b
 }
 .result-area {
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding-bottom: 250px;
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
 }
 
 @media (min-width:550px) {
@@ -277,8 +280,9 @@ background: #ffdac95b
 
 .result-area {
     margin-top: 30px;
-    font-size: 20px;
+    font-size: 24px;
     padding-bottom: 250px;
+    max-width: 500px;
 }
 
 }
