--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ background: #ffdac95b
     width: 150px;
     padding: 5px;
 }
-#choose-option {}
+
 .section__result-btn {
     margin-top: 30px;
     display: flex;
@@ -215,10 +215,31 @@ background: #ffdac95b
 .result-area {
     margin-top: 20px;
     font-size: 20px;
-    padding-bottom: 250px;
     text-align: center;
     width: 100%;
     max-width: 400px;
+}
+.section__table-div {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    padding-bottom: 150px;
+}
+.section__table, .section__table-th, .section__table-td {
+    border: 2px solid rgb(243, 146, 35);
+    border-collapse: collapse;
+}
+.section__table-th {
+    font-size: 18px;
+    height: 40px;
+}
+.section__table-td {
+    font-size: 16px;
+    text-align: center;
+    height: 25px;
+}
+.section__table {
+    width: 100%;
 }
 
 @media (min-width:550px) {
@@ -280,7 +301,6 @@ background: #ffdac95b
 .result-area {
     margin-top: 30px;
     font-size: 24px;
-    padding-bottom: 250px;
     max-width: 500px;
 }
 
