--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 @font-face {
     font-family: 'Coolvetica';
-    src: url(./fonts/coolvetica\ rg.otf) format('openrype');
+    src: url(./fonts/coolvetica\ rg.otf) format('opentype');
     font-display: swap;
 }
 
