--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ background: #ffdac95b
 
 .section__h1 {
     font-size: 48px;
+    margin-top: 10px;
     margin-bottom: 0;
     text-align: center;
     font-family: 'Keepon-Truckin', sans-serif;
